--- a/ansible/extra_roles/common/ubuntu/common_base_ubuntu/tasks/main.yml
+++ b/ansible/extra_roles/common/ubuntu/common_base_ubuntu/tasks/main.yml
@@ -26,6 +26,7 @@
     - build-essential
     - python-dev
     - python-pip
+    - python-virtualenv
     - python-apt
 
 - name: Install Python Virtual Environment Libraries
